# rust-lambda-poc

./: Cargo.toml  README.md  samconfig.toml  template.yaml
deploy/: cdk.json  package-lock.json
deploy/lib/: deploy-stack.ts
src/: main.rs
